# order-backend-websocket

./: .dockerignore  .env  .env.production  Cargo.toml  buildspec.yml  dev.Dockerfile  ecr.base.Dockerfile  ecr.run.Dockerfile
migrations/2019-08-20-010236_create_init/: down.sql  up.sql
src/: codec.rs  main.rs  schema.rs  server.rs  session.rs
src/models/: mod.rs
static/: websocket.html
