[package]
name = "order-backend-websocket"
version = "0.1.0"
authors = ["cg <rb7480@naver.com>"]
edition = "2018"


[dependencies]
actix = "0.8.1"
actix-web = "1.0.0-beta.4"
actix-web-actors = "1.0.0-beta.4"
actix-files = "0.1.0-beta.4"

rand = "0.6"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-codec = "0.1"
env_logger = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
